updated the design using box to define snakes ladders or coins, making desing extensible